kubernetes/overlays/demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mapserver-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: mapserver.sat.arz.berlin
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mapserver-service
                port:
                  number: 80
  tls:
    - hosts:
        - mapserver.sat.arz.berlin
      secretName: mapserver-tls
